# dlnasrv

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.ps1  build.sh
.cargo/: config.toml
.github-tmp/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
.kiro/specs/command-line-argument-fix/: design.md  requirements.md  tasks.md
.kiro/specs/cross-platform-compatibility/: design.md  requirements.md  tasks.md
docs/: linux-setup.md  macos-setup.md  windows-setup.md
packaging/: README.md  build-packages.sh
packaging/linux/: build-deb.sh  build-rpm.sh
packaging/macos/: build-pkg.sh
packaging/windows/: build-msi.ps1  nsis  opendlna.wxs
scripts/: run-tests.ps1  run-tests.sh
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  media.rs  ssdp.rs
src/config/: example.rs  mod.rs  validation.rs  watcher.rs
src/database/: mod.rs
src/platform/: config.rs  diagnostics.rs  error.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/platform/filesystem/: mod.rs  windows.rs
src/platform/network/: linux.rs  macos.rs  mod.rs  windows.rs
src/watcher/: integration.rs  mod.rs
src/web/: handlers.rs  mod.rs  xml.rs
tests/: integration_tests.rs  platform_tests.rs
