[package]
name = "rust-dlna-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headers = "0.4"
xml-rs = "0.8"
http-range-header = "0.4"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0