[package]
name = "opendlna"
version = "0.1.0"
edition = "2021"

[lib]
name = "opendlna"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.47", features = ["rt-multi-thread", "net", "fs", "time", "sync", "macros", "io-util", "signal"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
libc = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6.1", default-features = false }
notify-debouncer-full = "0.3"
toml = "0.8"
serde_json = "1.0"
dirs = "5.0"
hostname = "0.4"
num_cpus = "1.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock"
] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0
strip = true
overflow-checks = false